// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preservationRules createPreservationRule creates a preservation rule 1`] = `
{
  "appName": "discord",
  "endDatetime": 2022-09-21T04:00:00.000Z,
  "initialBackupComplete": 0,
  "name": "Rule",
  "selected": {
    "key": "value",
  },
  "startDatetime": 2022-09-21T02:00:00.000Z,
}
`;

exports[`preservationRules createPreservationRule creates a preservation rule 2`] = `
{
  "appName": "discord",
  "endDatetime": "2022-09-21T04:00:00.000Z",
  "initialBackupComplete": 0,
  "name": "Rule",
  "selectedJson": "{"key":"value"}",
  "startDatetime": "2022-09-21T02:00:00.000Z",
}
`;

exports[`preservationRules fetchPreservationRules fetches preservation rules 1`] = `
{
  "appName": "discord",
  "endDatetime": 2022-09-21T04:00:00.000Z,
  "initialBackupComplete": 0,
  "name": "Rule",
  "selected": {
    "key": "value",
  },
  "startDatetime": 2022-09-21T02:00:00.000Z,
}
`;

exports[`preservationRules fetchPreservationRules fetches preservation rules 2`] = `
{
  "appName": "discord",
  "endDatetime": 2022-09-21T05:00:00.000Z,
  "initialBackupComplete": 0,
  "name": "Rule2",
  "selected": {
    "key2": "value2",
  },
  "startDatetime": 2022-09-21T03:00:00.000Z,
}
`;

exports[`preservationRules updatePreservationRule updates a preservation rule 1`] = `
{
  "appName": "twitter",
  "endDatetime": 2022-09-21T05:00:00.000Z,
  "initialBackupComplete": 0,
  "name": "Rule3",
  "selected": {
    "key3": "value3",
  },
  "startDatetime": 2022-09-21T03:00:00.000Z,
}
`;

exports[`preservationRules updatePreservationRule updates a preservation rule 2`] = `
{
  "appName": "discord",
  "endDatetime": "2022-09-21T04:00:00.000Z",
  "initialBackupComplete": 0,
  "name": "Rule",
  "selectedJson": "{"key":"value"}",
  "startDatetime": "2022-09-21T02:00:00.000Z",
}
`;

exports[`preservationRules updatePreservationRule updates a preservation rule 3`] = `
{
  "appName": "twitter",
  "endDatetime": "2022-09-21T05:00:00.000Z",
  "initialBackupComplete": 0,
  "name": "Rule3",
  "selectedJson": "{"key3":"value3"}",
  "startDatetime": "2022-09-21T03:00:00.000Z",
}
`;
